Ajustando os campos de destinatario e identificação
Signed-off-by: Renan Carvalho <renan.azevedo.carvalho@gmail.com>

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,7 +1,5 @@
-= nfe-ruby
-Implementação da Nota Fiscal Eletronica em ruby.
-
-Em desenvolvimento
+= nfe-map
+Mapear os dados da nota fiscal eletrônica, versão 3.10
 
 == Copyright
 
