--- a/README.rdoc
+++ b/README.rdoc
@@ -1,11 +1,19 @@
 = nfe-map
+
 Mapear os dados da nota fiscal eletrônica, versão 3.10
 
-- Precisa ser criado as validações com os xsds
+== TODO
+
+- Criar as validações baseada  nos xsds
+- Ajustar os campos para os novos campos da versão 3.10
+- Criar testes
+- Refatorar o código para versão 3.10
+- Validações dos campos
 
 
-O objetivo futuro é criar e tratar as requisições com a receita federal.
+== Objetivo
 
-== Copyright
+- Futuramente criar requisições para a receita federal.
 
-Copyright (c) 2010 Vinicius Gati. See LICENSE for details.
+Copyright (c) 2017 Renan Carvalho. See LICENSE.txt for details.
+
